# polars_guide

./: README.md  pyproject.toml
notebooks/: pandas_vs_polars.ipynb
notebooks/.ipynb_checkpoints/: pandas_vs_polars-checkpoint.ipynb
